--- a/TODO
+++ b/TODO
@@ -35,9 +35,7 @@ nice to have local lists of fixmes and stuff...
   1/ either by adding fxlog*prefix macros (dependent on the language)
   2/ or by finding a way to adapt fx*prefix macros for tty output (?!)
 
-* Provide a collection of themes as separate source files, redefining existing
-  (or adding user) layouts. See marginnote, pdfcomment, the todonotes package
-  etc. 
+* See marginnote, pdfcomment, the todonotes package etc. 
 
 * See if we want more than the silent option. For instance
   silent={log,tty,summary,all}.
